trunk/Archive2/d1/c681ba288bc270/output
main.cpp: In function 'int main()':
main.cpp:53:9: error: 'cout' was not declared in this scope
         cout
         ^
main.cpp:53:9: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.2/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
